tests/ui/associated-types/issue-36499.stderr
error: leading `+` is not supported
  --> $DIR/issue-36499.rs:2:9
   |
LL |     2 + +2;
   |         ^ unexpected `+`
   |
help: try removing the `+`
   |
LL -     2 + +2;
LL +     2 + 2;
   |

error: aborting due to 1 previous error

