tests/ui/associated-types/issue-36499.rs
fn main() {
    2 + +2; //~ ERROR leading `+` is not supported
}
